# LIRS-WCT

./: .clang-format  .gitignore  README.md  build.sh  dependencies.sh  deploy.sh
lirs_wct_console/: CMakeLists.txt
lirs_wct_console/include/: Common.h  Mesh.h  ModelLoader.h  Vector2f.h  Vector3f.h  heightmap.h  libtrix.h  math_3d.h  png2dae.h  png2stl.h  script_generator.h  utils.h  world_creator.h
lirs_wct_console/src/: Mesh.cpp  ModelLoader.cpp  Vector2f.cpp  Vector3f.cpp  heightmap.cpp  libtrix.cpp  main.cpp  png2dae.cpp  png2stl.cpp  script_generator.cpp  stl2dae.cpp  utils.cpp  world_creator.cpp
lirs_wct_gui/: CMakeLists.txt
lirs_wct_gui/include/: mainwindow.h  structs.h  utils.h
lirs_wct_gui/src/: main.cpp  mainwindow.cpp  utils.cpp
lirs_wct_gui/ui/: mainwindow.ui
